# SYCL-CTS

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  README.rst  clangformat.py  conformanceFilter.csv  conformance_filter.csv  cts_regression.csv  license.txt  readme.rst  readme.txt  requirements.txt  run_conformance_tests.py  runtests.py  samplefilter.csv
gl_util/: CMakeLists.txt  gl_util.h  gl_util_default.cpp
tests/: CMakeLists.txt
tests/accessor/: accessor_api.cpp  accessor_api_buffer.cpp  accessor_api_buffer_atomic64.cpp  accessor_api_buffer_common.h  accessor_api_buffer_core.cpp  accessor_api_buffer_fp16.cpp  accessor_api_buffer_fp64.cpp  accessor_api_common_all.h  accessor_api_common_buffer_local.h  accessor_api_image.cpp  accessor_api_image_common.h  accessor_api_image_core.cpp  accessor_api_image_fp16.cpp  accessor_api_local.cpp  accessor_api_local_atomic64.cpp  accessor_api_local_common.h  accessor_api_local_core.cpp  accessor_api_local_fp16.cpp  accessor_api_local_fp64.cpp  accessor_api_types_core.h  accessor_api_types_fp16.h  accessor_api_types_fp64.h  accessor_api_utility.h  accessor_common.h  accessor_constructors.cpp  accessor_constructors_buffer.cpp  accessor_constructors_buffer_fp64.cpp  accessor_constructors_buffer_placeholder.cpp  accessor_constructors_buffer_utility.h  accessor_constructors_fp16.cpp  accessor_constructors_fp64.cpp  accessor_constructors_half.cpp  accessor_constructors_image.cpp  accessor_constructors_image_utility.h  accessor_constructors_local.cpp  accessor_constructors_local_utility.h  accessor_constructors_utility.h  accessor_default_values.h  accessor_default_values_core.cpp  accessor_default_values_fp16.cpp  (+132 more)
tests/accessor_basic/: CMakeLists.txt  accessor_common.h  accessor_default_values.cpp.in  accessor_default_values.h  accessor_exceptions.cpp.in  accessor_exceptions.h  accessor_implicit_conversions.cpp.in  accessor_implicit_conversions.h  accessor_iterator_requirement.cpp  accessor_requisite_entire_buffer.cpp
tests/accessor_generic/: CMakeLists.txt  generic_accessor_api.cpp.in  generic_accessor_api_common.h  generic_accessor_common_buffer_constructors.cpp.in  generic_accessor_common_buffer_constructors.h  generic_accessor_common_buffer_tag_constructors.cpp.in  generic_accessor_common_buffer_tag_constructors.h  generic_accessor_def_constructor.cpp.in  generic_accessor_def_constructor.h  generic_accessor_linearization.cpp.in  generic_accessor_linearization.h  generic_accessor_properties.cpp.in  generic_accessor_properties.h  generic_accessor_semantics.cpp  generic_accessor_zero_dim_constructor.cpp.in  generic_accessor_zero_dim_constructor.h
tests/accessor_legacy/: accessor_api_buffer_atomic64.cpp  accessor_api_buffer_common.h  accessor_api_buffer_core.cpp  accessor_api_buffer_fp16.cpp  accessor_api_buffer_fp64.cpp  accessor_api_common_all.h  accessor_api_common_buffer_local.h  accessor_api_image_common.h  accessor_api_image_core.cpp  accessor_api_image_fp16.cpp  accessor_api_local_atomic64.cpp  accessor_api_local_common.h  accessor_api_local_core.cpp  accessor_api_local_fp16.cpp  accessor_api_local_fp64.cpp  accessor_api_utility.h  accessor_constructors_buffer.cpp  accessor_constructors_buffer_placeholder.cpp  accessor_constructors_buffer_utility.h  accessor_constructors_fp16.cpp  accessor_constructors_fp64.cpp  accessor_constructors_image.cpp  accessor_constructors_image_utility.h  accessor_constructors_local.cpp  accessor_constructors_local_utility.h  accessor_constructors_utility.h  accessor_types_core.h  accessor_types_fp16.h  accessor_types_fp64.h  accessor_types_image_core.h  accessor_types_image_fp16.h  accessor_utility_common.h
tests/accessor_placeholder/: CMakeLists.txt  generic_accessor_placeholder_buffer_constructor.cpp.in  generic_accessor_placeholder_buffer_constructor.h  generic_accessor_placeholder_buffer_range_constructor.cpp.in  generic_accessor_placeholder_buffer_range_constructor.h  generic_accessor_placeholder_buffer_range_offset_constructor.cpp.in  generic_accessor_placeholder_buffer_range_offset_constructor.h  generic_accessor_placeholder_zero_length_buffer_constructor.cpp.in  generic_accessor_placeholder_zero_length_buffer_constructor.h  generic_accessor_placeholder_zero_length_buffer_range_constructor.cpp.in  generic_accessor_placeholder_zero_length_buffer_range_constructor.h  generic_accessor_placeholder_zero_length_buffer_range_offset_constructor.cpp.in  generic_accessor_placeholder_zero_length_buffer_range_offset_constructor.h
tests/address_space/: address_space.cpp  address_space_common.h  address_space_core.cpp  address_space_fp16.cpp  address_space_fp64.cpp
tests/address_space_aliases/: CMakeLists.txt  address_space_aliases_core.cpp
tests/atomic/: atomic_api.cpp  atomic_api_32.cpp  atomic_api_64_base.cpp  atomic_api_64_extended.cpp  atomic_api_common.h  atomic_common.h  atomic_constructors.cpp  atomic_constructors_32.cpp  atomic_constructors_64.cpp  atomic_constructors_common.h
tests/atomic_fence/: atomic_fence.cpp
tests/atomic_ref/: atomic_ref_T_op_test.h  atomic_ref_T_op_test_atomic64.cpp  atomic_ref_T_op_test_core.cpp  atomic_ref_T_op_test_pointers.cpp  atomic_ref_T_op_test_pointers_fp64.cpp  atomic_ref_add_sub_op_all_types_test.h  atomic_ref_add_sub_op_all_types_test_atomic64.cpp  atomic_ref_add_sub_op_all_types_test_core.cpp  atomic_ref_add_sub_op_all_types_test_pointers.cpp  atomic_ref_add_sub_op_all_types_test_pointers_fp64.cpp  atomic_ref_api_tests.h  (+58 more)
util/: CMakeLists.txt  accuracy.h  allocation.h  array.h  aspect_set.cpp  aspect_set.h  cmdarg.cpp  cmdarg.h  collection.cpp  collection.h  conversion.h  cpp_compat.h  csv.cpp  csv.h  device_manager.cpp  device_manager.h  device_set.cpp  device_set.h  exceptions.h  executor.cpp  executor.h  extensions.h  kernel_names.h  kernel_restrictions.cpp  kernel_restrictions.h  logger.cpp  logger.h  math_helper.cpp  math_helper.h  math_reference.cpp  math_reference.h  math_vector.h  opencl_helper.cpp  opencl_helper.h  printer.cpp  printer.h  proxy.h  selector.cpp  selector.h  singleton.h  (+16 more)
(+1533 files in other folders)
